--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,18 +1,25 @@
 .login{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 80vh;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 
 .login-container{
+    position: relative;
     border: 2px solid var(--primary-color);
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
     padding: 1.2rem;
     border-radius: 5px;
-    width: 22%;
+    width: 30%;
     margin-bottom: 20px;
     margin-top: 20px;
+    background-color: white;
 }
 
 .login-container div{
@@ -41,6 +48,12 @@
     margin-bottom: 22px;
 }
 
+.create-account-link{
+    text-align: center;
+    margin-top: 10px;
+}
+
 .create-account-link strong{
     color: var(--primary-color);
+    cursor: pointer;
 }
