--- a/src/components/ProductListing/ProductCard.css
+++ b/src/components/ProductListing/ProductCard.css
@@ -40,19 +40,22 @@
     position: absolute;
     top: 2%;
     left: 3%;
-    background-color: #10B981;
-    color: white;
+    color: #10B981;
     padding: 0rem 0.4rem;
     border-radius: 20px;
-    font-size: 0.9rem;
+    font-size: 2.2rem;
 }
 
 .productInfo{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-areas: ". ."
-    "price price";
-    grid-gap: 5px;
+    display: flex;
+    flex-direction:column;
+    text-align: center;
+}
+
+.productInfo div:nth-child(2){
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .productName{
@@ -88,7 +91,7 @@
     color: white;
     font-weight: 600;
     border: none;
-    transition: 0.3s;
+    transition: 0.2s;
 }
 
 .addToCartBtn:hover{
