--- a/src/components/Home/Showcase.css
+++ b/src/components/Home/Showcase.css
@@ -7,6 +7,11 @@
     padding: 2rem 0rem;
 }
 
+.banner-title{
+    color: var(--primary-color);
+    font-weight: bold;
+}
+
 .banner-btns{
     display: flex;
     flex-direction: column;
@@ -53,25 +58,42 @@
 }
 
 .showcase-products button{
-    height: 45px;
-    width: 105px;
-    border-radius: 7px;
-    transition: all 0.3s;
-    margin: 5px;
+    height: 3rem;
+    width: 6rem;
+    border-radius: 5px;
 }
 
 .browse-btn{
     background:var(--primary-color);
     color: white;
-    border: 1px solid white;
+    border: none;
+    transition: all 0.2s;
 }
 
-.login-btn{
+.signup-btn{
+    position: relative;
+    margin-top: 1rem;
     color: var(--primary-color);
-    background-color: white;
-    border: 1px solid var(--primary-color);
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.signup-btn::after{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 0.15rem;
+    background-color: var(--primary-color);
+    bottom: 0;
+    left: 0;
+    transform: scale(0,1);
+    transition: all 0.3s;
+}
+
+.signup-btn:hover::after{
+    transform: scale(1,1);
 }
 
 .showcase-products button:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
