--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -14,28 +14,55 @@
     transform: translate(-50%,-50%);
     top: 50%;
     left: 50%;
-    padding: 1.2rem;
+    padding: 1.4rem;
     border-radius: 5px;
-    width: 30%;
+    width: 25rem;
     margin-bottom: 20px;
     margin-top: 20px;
     background-color: white;
 }
 
-.login-container div{
+.login-container > div{
     display: flex;
     flex-direction: column;
 }
 
-.login-container input{
-    padding: 0.5rem;
-    border-radius: 5px;
-    border: 1px solid var(--primary-color);
-    font-size: 1.2rem;
-    background-color: #F5F3FF;
+.login-container .login-btn{
+    width: 100%;
 }
 
-.login-container button{
+.login-container .input-box{
+    display: flex;
+    align-items: center;
+    border-bottom: 2px solid var(--primary-color);
+    border-radius: 3px;
+    padding: 0 0.8rem;
+    background-color: #f7f2ff;
+    margin-bottom: 1.4rem;
+}
+
+.login-container .input-box .icon{
+    font-size: 1.3rem;
+    color: var(--primary-color);
+}
+
+.login-container input{
+    background-color: #f7f2ff;
+    padding: 0.5rem;
+    border: none;
+    font-size: 1.2rem;
+    width: 100%;
+}
+
+.login-container input:focus{
+    outline: none;
+}
+
+.login-container .options{
+    text-align: center;
+}
+
+.login-container .login-btn{
     height: 40px;
     background-color: var(--primary-color);
     color: white;
@@ -44,13 +71,24 @@
     font-weight: 600;
 }
 
-.login-container div:not(:last-child){
-    margin-bottom: 22px;
+.login-container .guest-credentials-btn{
+    border: none;
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    padding: 0.2rem;
+    background: transparent;
+    width: 50%;
+    text-align: center;
+    margin-top: 0.5rem;
 }
+
+/* .login-container div:not(:last-child){
+    margin-bottom: 22px;
+} */
 
 .create-account-link{
     text-align: center;
-    margin-top: 10px;
+    margin-top: 1rem;
 }
 
 .create-account-link strong{
