--- a/src/components/ProductListing/ProductCard.css
+++ b/src/components/ProductListing/ProductCard.css
@@ -1,5 +1,3 @@
-@import url('/src/index.css');
-
 .product-card{
     display: flex;
     flex-direction: column;
@@ -7,11 +5,16 @@
     position: relative;
     height: 475px;
     width: 300px;
-    border: 2px solid var(--primary-color);
     border-radius: 7px;
     padding: 0.3rem;
     margin: 50px auto 0px auto;
-    box-shadow: 3px 3px 12px 0px rgba(0,0,0,0.30);
+    box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s;
+}
+
+.product-card:hover{
+    box-shadow: 2px 2px 7px 2px rgba(0, 0, 0, 0.4);
+    transform: scale(1.01);
 }
 
 .out-of-stock-card::after{
@@ -33,7 +36,7 @@
 .product-card img {
     height: 300px;
     width: 100%;
-    border-bottom: 1px solid var(--primary-color);
+    border-bottom: 1px solid rgb(206, 206, 206);
 }
 
 .best-seller-tag{
@@ -52,11 +55,51 @@
     text-align: center;
 }
 
-.productInfo div:nth-child(2){
+.productInfo .name-rating-info{
+    display: flex;
+    justify-content: space-between;
+    padding: 0.8rem 1rem 0.2rem 1rem;
+}
+
+.productInfo .type-price-info{
+    display: flex;
+    flex-direction: column;
+    padding: 0 1rem;
+}
+
+.productInfo .type-price-info .type{
+    color: gray;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+.productInfo .type-price-info .price{
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.productInfo .name-rating-info .name{
+    display: inline-block;
+    font-size: 1.2rem;
+    width: 70%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+    text-align: left;
+}
+
+.productInfo .name-rating-info .rating{
+    display: inline-block;
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    font-weight: bold;
+}
+
+/* .productInfo div:nth-child(2){
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
+} */
 
 .productName{
     font-size: 1.2rem;
@@ -69,11 +112,6 @@
     color: gray;
     padding-left: 10px;
     display: block;
-}
-
-.productRating{
-    margin:auto;
-    font-size: 1.1rem;
 }
 
 .productPrice{
