--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -50,7 +50,7 @@
     background-color: #f7f2ff;
     padding: 0.5rem;
     border: none;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     width: 100%;
 }
 
@@ -59,11 +59,16 @@
 }
 
 .login-container .options{
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.login-container .options button{
+    height: 2.5rem;
+    width: 48%;
 }
 
 .login-container .login-btn{
-    height: 40px;
     background-color: var(--primary-color);
     color: white;
     border: none;
@@ -77,14 +82,9 @@
     border-radius: 5px;
     padding: 0.2rem;
     background: transparent;
-    width: 50%;
-    text-align: center;
-    margin-top: 0.5rem;
+    color: var(--primary-color);
+    font-weight: 600;
 }
-
-/* .login-container div:not(:last-child){
-    margin-bottom: 22px;
-} */
 
 .create-account-link{
     text-align: center;
