--- a/src/components/Logout/Logout.css
+++ b/src/components/Logout/Logout.css
@@ -14,8 +14,8 @@
     top: 50%;
     left: 50%;
     border: 2px solid var(--primary-color);
-    width: 30%;
-    padding: 1.5rem;
+    width: 25rem;
+    padding: 1rem;
     background-color: white;
     border-radius: 5px;
 }
@@ -27,9 +27,8 @@
 .logout-warning{
     color: var(--primary-color);
     font-size: 1.2rem;
-    font-weight: 600;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 0.8rem;
 }
 
 .logout-btns{
@@ -37,12 +36,35 @@
     justify-content: center;
 }
 
+.logout-btns .icon{
+    font-size: 1.7rem;
+}
+
 .logout-btns button{
+    position: relative;
     border: none;
     margin-right: 20px;
-    height: 40px;
+    height: 2rem;
     width: 100px;
-    border: 1px solid var(--primary-color);
+    background: transparent;
+    color: var(--primary-color);
+    font-weight: bold;
+}
+
+.logout-btns button::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: var(--primary-color);
+    height: 0.1rem;
+    width: 100%;
+    transform: scale(0,1);
+    transition: all 0.3s;
+}
+
+.logout-btns button:hover::after{
+    transform: scale(1,1);
 }
 
 .logout-modal .close-btn{
@@ -52,5 +74,6 @@
     transform: scale(1.5);
     color: var(--primary-color);
     font-weight: 600;
+    cursor: pointer;
 }
 
