--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -74,16 +74,25 @@
     border: none;
     border-radius: 5px;
     font-weight: 600;
+    border: 2px solid var(--primary-color);
+}
+
+.login-container .login-btn:hover{
+    border: 2px solid rgb(0, 225, 255);
 }
 
 .login-container .guest-credentials-btn{
     border: none;
-    border: 1px solid var(--primary-color);
+    border: 2px solid var(--primary-color);
     border-radius: 5px;
     padding: 0.2rem;
     background: transparent;
     color: var(--primary-color);
     font-weight: 600;
+}
+
+.login-container .guest-credentials-btn:hover{
+    border: 2px solid rgb(0, 225, 255);
 }
 
 .create-account-link{
