--- a/src/components/Nav-Bar/Header.css
+++ b/src/components/Nav-Bar/Header.css
@@ -1,41 +1,42 @@
 .navigation-bar{
-    display: flex;
-    align-items: center;
-    padding: 1.3rem;
-    box-shadow: 4px 7px 8px -8px rgba(0, 0, 0, 0.33);
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 1.3rem;
+  box-shadow: 4px 7px 8px -8px rgba(0, 0, 0, 0.33);
 }
 
 .header_main{
-    display: flex;
-    margin-left: 2rem;
+  display: flex;
+  margin-left: 2rem;
 }
 
 .header_logo .icon{
-    font-size: 3.5rem;
-    color: var(--primary-color);
+  font-size: 3.5rem;
+  color: var(--primary-color);
 }
 
 .header_headings{
-    color: var(--primary-color);
-    margin-left:10px;
+  color: var(--primary-color);
+  margin-left:10px;
 }
 
 .primary-heading{
-    font-size: 2.1rem;
-    margin: 0px;
-    font-weight: 600;
+  font-size: 2.1rem;
+  margin: 0px;
+  font-weight: 600;
 }
 
 .secondary-heading{
-    font-size: 0.8rem;
-    letter-spacing: 22.5px;
-    margin: 0px;
-    font-weight: 600;
+  font-size: 0.8rem;
+  letter-spacing: 22.5px;
+  margin: 0px;
+  font-weight: 600;
 }
 
 .header_search{
-    width: 60%;
-    position: relative;
+  width: 60%;
+  position: relative;
 }
 
 .header_search .search-suggestions{
@@ -63,239 +64,146 @@
 }
 
 .header_search input{
-    display: block;
-    height: 40px;
-    margin-left: auto;
-    padding: 0.8rem;
-    width: 70%;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-    background-color: rgb(243, 243, 243);
-    font-size: 0.9rem;
+  display: block;
+  height: 40px;
+  margin-left: auto;
+  padding: 0.8rem;
+  width: 70%;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  background-color: rgb(243, 243, 243);
+  font-size: 0.9rem;
 }
 
 .header_search input:focus{
-    outline: none;
+  outline: none;
 }
 
 .header_options{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 25%;
-    margin: 0 0.8rem 0 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 25%;
+  margin: 0 0.8rem 0 1rem;
 }
 
 .header_options .nav-link{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 5rem;
-    text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 5rem;
+  text-decoration: none;
 }
 
 .header_options button{
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 1.2rem;
-    color: var(--primary-color);
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--primary-color);
 }
 
 .header_options .link-name{
-    font-size: 0.9rem;
-    font-weight: 600;
-    color: var(--primary-color);
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: var(--primary-color);
 }
 
 .header_options .navbar-icon{
-    font-size: 1.8rem;
-    color: var(--primary-color);
-    transition: 0.3s;
+  font-size: 1.8rem;
+  color: var(--primary-color);
+  transition: 0.3s;
 }
 
 .header_options .navbar-icon:hover{
-   transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .cart-length{
-    position: absolute;
-    top: 70%;
-    left: 25%;
-    background-color: var(--primary-color);
-    color: white;
-    border-radius: 50%;
-    height: 20px;
-    width: 20px;
-    font-size: 0.9rem;
+  position: absolute;
+  top: 70%;
+  left: 25%;
+  background-color: var(--primary-color);
+  color: white;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  font-size: 0.9rem;
 }
 
 .userLogoBtn{
-    position: relative;
-    font-weight: 600;
-    line-height: normal;
-    transform: scale(1.5);  
+  position: relative;
+  font-weight: 600;
+  line-height: normal;
+  transform: scale(1.5);  
 }
 
 .hamburger-menu-icon{
-    font-size: 2rem;
-    color: var(--primary-color);
-    display: none;
-    cursor: pointer;
+  font-size: 1.5rem;
+  color: var(--primary-color);
+  display: none;
+  cursor: pointer;
+}
+
+.nav-toggle{
+  display: none;
 }
 
 @media (max-width:420px){
 
-    /* .navigation-bar{
-        background-color: var(--primary-color);
-    } */
+    .navigation-bar{
+      justify-content: space-between;
+    }
+  
+    .header-main{
+      align-self: center;
+    }
 
     .header_search{
-        display:none;
+      display:none;
+    }
+
+    .hamburger-menu-icon{
+      display: block;
+      align-self: flex-end;
     }
 
     .header_options{
-        position: fixed;
-        top: 12%;
-        right: 0;
-        flex-direction: column;
-        align-items: center;
-        justify-content: start;
-        background-color: var(--primary-color);
-        height: 100vh;
-        width: 100%;
-        z-index: 10;
-        margin: 0;
+      position: absolute;
+      top: 100%;
+      left: 0%;
+      flex-direction: column;
+      justify-content: start;
+      background-color: var(--primary-color);
+      height: 100vh;
+      width: 100%;
+      z-index: 10;
+      margin: 0;
+      transform: scale(0,1);
+      transition: transform 0.2s ease-in;
+      transform-origin: right;
+    }
+
+    .nav-toggle:checked ~ .header_options{
+      display: flex;
+      align-items: center;
+      transform: scale(1,1);
     }
 
     .header_options .nav-link{
-        margin-top: 2.5rem;
+      padding: 2rem 0;
+      border-bottom: 2px solid white;
+      width: 100%;
     }
 
     .header_options .link-name, .header_options .navbar-icon{
-        color: white;
-        font-size: 1.5rem;
-        font-weight: bold;
+      color: white;
+      font-size: 1.5rem;
+      font-weight: bold;
     }
 
     .header_options .navbar-icon{
-        font-size: 2.5rem;
+      font-size: 2.5rem;
     }
 }
-
-
-/* *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-} 
-nav{
-  display: flex;
-  height: 80px;
-  width: 100%;
-  background: #1b1b1b;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 50px 0 100px;
-  flex-wrap: wrap;
-}
-nav .logo{
-  color: #fff;
-  font-size: 35px;
-  font-weight: 600;
-}
-nav ul{
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-}
-nav ul li{
-  margin: 0 5px;
-}
-nav ul li a{
-  color: #f2f2f2;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 8px 15px;
-  border-radius: 5px;
-  letter-spacing: 1px;
-  transition: all 0.3s ease;
-}
-nav ul li a.active,
-nav ul li a:hover{
-  color: #111;
-  background: #fff;
-}
-nav .menu-btn i{
-  color: #fff;
-  font-size: 22px;
-  cursor: pointer;
-  display: none;
-}
-input[type="checkbox"]{
-  display: none;
-}
-@media (max-width: 1000px){
-  nav{
-    padding: 0 40px 0 50px;
-  }
-}
-@media (max-width: 920px) {
-  nav .menu-btn i{
-    display: block;
-  }
-  #click:checked ~ .menu-btn i:before{
-    content: "\f00d";
-  }
-  nav ul{
-    position: fixed;
-    top: 80px;
-    left: -100%;
-    background: #111;
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    display: block;
-    transition: all 0.3s ease;
-  }
-  #click:checked ~ ul{
-    left: 0;
-  }
-  nav ul li{
-    width: 100%;
-    margin: 40px 0;
-  }
-  nav ul li a{
-    width: 100%;
-    margin-left: -100%;
-    display: block;
-    font-size: 20px;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  #click:checked ~ ul li a{
-    margin-left: 0px;
-  }
-  nav ul li a.active,
-  nav ul li a:hover{
-    background: none;
-    color: cyan;
-  }
-}
-.content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  z-index: -1;
-  width: 100%;
-  padding: 0 30px;
-  color: #1b1b1b;
-}
-.content div{
-  font-size: 40px;
-  font-weight: 700;
-} */
