--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,5 +1,3 @@
-@import url('/src/index.css');
-
 .cart{
     display: flex;
     padding: 2rem 4rem;
@@ -10,7 +8,8 @@
     display: flex;
     flex-direction: column;
     height: 560px;
-    border: 1px solid rgb(194, 192, 192);
+    /* border: 1px solid rgb(194, 192, 192); */
+    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.5);
     margin-right: 2rem;
     border-radius: 7px;
 }
@@ -18,7 +17,7 @@
 .cart .subtotal-container{
     display: flex;
     flex-direction: column;
-    border: 1px solid rgb(194, 192, 192);
+    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.5);
     width: 30%;
     height: 300px;
     border-radius: 7px;
@@ -178,9 +177,13 @@
 }
 
 .empty-cart .icon{
-    font-size: 4rem;
+    font-size: 3.5rem;
 }
 
 .empty-cart span{
-    font-size: 2rem; 
+    font-size: 1.5rem; 
+}
+
+@media (max-width:420px){
+    
 }
