--- a/src/components/Home/Banner.css
+++ b/src/components/Home/Banner.css
@@ -1,19 +1,36 @@
-.banner{
-  position:relative;
+.banner {
+  position: relative;
 }
 
-.banner img{
+.banner img {
   height: 350px;
   margin-top: 15px;
 }
 
 .banner p {
   position: absolute;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   top: 70%;
   left: 50%;
   color: white;
   font-size: 1.5rem;
 }
 
+@media (min-width: 900px) and (max-width: 1120px) {
+  .banner img {
+    height: 350px;
+    margin-top: 15px;
+  }
+}
 
+/* @media (max-width: 900px) {
+  .banner img {
+    border-radius: 50%;
+    height: 40rem;
+    width: 5rem;
+  }
+
+  .banner {
+    border-radius: 50% !important;
+  }
+} */
