--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,189 +1,236 @@
-.cart{
-    display: flex;
-    padding: 2rem 4rem;
+.cart {
+  display: flex;
+  padding: 2rem 4rem;
 }
 
-.cart .products-cart-container{
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    height: 560px;
-    /* border: 1px solid rgb(194, 192, 192); */
-    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.5);
-    margin-right: 2rem;
-    border-radius: 7px;
+.cart .products-cart-container {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  height: 560px;
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.5);
+  margin-right: 2rem;
+  border-radius: 7px;
 }
 
-.cart .subtotal-container{
-    display: flex;
-    flex-direction: column;
-    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.5);
-    width: 30%;
-    height: 300px;
-    border-radius: 7px;
+.cart .subtotal-container {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.5);
+  width: 30%;
+  height: 300px;
+  border-radius: 7px;
 }
 
-.subtotal-container div{
-    display: flex;
-    justify-content: space-between;
-    font-size: 1.2rem;
-    padding: 0.4rem 1rem;
+.subtotal-container div {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  padding: 0.4rem 1rem;
 }
 
-.subtotal-container div:last-child{
-    margin-top: auto;
-    color: var(--primary-color);
-    font-size: 1.4rem;
-    font-weight: 600;
+.subtotal-container div:last-child {
+  margin-top: auto;
+  color: var(--primary-color);
+  font-size: 1.4rem;
+  font-weight: 600;
 }
 
-.cart h3{
-    margin: 0;
-    padding: 0.7rem 1rem;
-    font-size: 1.4rem;
-    border-bottom: 1px solid #D1D5DB;
+.cart h3 {
+  margin: 0;
+  padding: 0.7rem 1rem;
+  font-size: 1.4rem;
+  border-bottom: 1px solid #d1d5db;
 }
 
-.subtotal-container h3{
-    margin-bottom: 20px;
+.subtotal-container h3 {
+  margin-bottom: 20px;
 }
 
-.products-cart-items{
-    overflow-y: scroll;
-    height:80%;
+.products-cart-items {
+  overflow-y: scroll;
+  height: 80%;
 }
 
 .products-cart-items::-webkit-scrollbar {
-    width: 0.5rem;
+  width: 0.5rem;
 }
 
 .products-cart-items::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 3px grey; 
-    border-radius: 10px;
+  box-shadow: inset 0 0 3px grey;
+  border-radius: 10px;
 }
 
 .products-cart-items::-webkit-scrollbar-thumb {
-    background: var(--primary-color); 
-    border-radius: 10px;
+  background: var(--primary-color);
+  border-radius: 10px;
 }
 
-.items-in-cart{
-    display: flex;
-    align-items: center;
-    height: 250px;
-    width: 100%;
-    border-bottom: 1px solid #D1D5DB;
-    padding: 1rem;
+.items-in-cart {
+  display: flex;
+  align-items: center;
+  height: 250px;
+  width: 100%;
+  border-bottom: 1px solid #d1d5db;
+  padding: 1rem;
 }
 
-.items-in-cart_product-details{
-    display: flex;
-    align-items: center;
+.items-in-cart_product-details {
+  display: flex;
+  align-items: center;
 }
 
-.items-in-cart_product-details img{
-    height: 200px;
-    width: 200px;
+.items-in-cart_product-details img {
+  height: 200px;
+  width: 200px;
 }
 
-.product-other-details{
-    display: flex;
+.product-other-details {
+  display: flex;
+  flex-direction: column;
+  margin-left: 2rem;
+}
+
+.product-other-details h2 {
+  margin-bottom: 5px;
+}
+
+.product-other-details span {
+  color: #94a3b8;
+}
+
+.product-other-details div {
+  margin-top: 15px;
+}
+
+.product-other-details button {
+  background: transparent;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.1rem;
+  padding: 0.3rem 0.4rem;
+  margin: 0.2rem;
+}
+
+.product-other-details .remove-btn {
+  background: var(--primary-color);
+  color: white;
+  border: 1px solid white;
+}
+
+.product-other-details .wishlist-btn {
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+
+.modify-quantity-btns {
+  text-align: right;
+  margin-left: auto;
+  margin-right: 20px;
+  padding: 1rem;
+}
+
+.modify-quantity-btns button {
+  background: var(--primary-color);
+  color: white;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+}
+
+.modify-quantity-btns button,
+.modify-quantity-btns span {
+  height: 25px;
+  width: 25px;
+  display: inline-block;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.modify-quantity-btns div {
+  font-size: 1.7rem;
+  font-weight: 600;
+}
+
+.placeorder-btn {
+  padding: 0.7rem 2rem;
+  text-align: right;
+  border-top: 1px solid #d1d5db;
+}
+
+.placeorder-btn button {
+  height: 50px;
+  width: 200px;
+  font-size: 1.2rem;
+  background: var(--primary-color);
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+.empty-cart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ddd6fe;
+  height: 70vh;
+}
+
+.empty-cart .icon {
+  font-size: 3.5rem;
+}
+
+.empty-cart span {
+  font-size: 1.5rem;
+}
+
+@media (min-width: 900px) and (max-width: 1200px) {
+  .product-other-details h2 {
+    font-size: 1.3rem;
+  }
+
+  .cart {
     flex-direction: column;
-    margin-left: 2rem;
-}
-
-.product-other-details h2{
-    margin-bottom: 5px;
-}
-
-.product-other-details span{
-    color: #94A3B8;
-}
-
-.product-other-details div{
-    margin-top: 15px;
-}
-
-.product-other-details button{
-    background: transparent;
-    border: none;
-    border-radius: 5px;
-    font-size: 1.1rem;
-    padding: 0.3rem 0.4rem;
-    margin: 0.2rem;
-}
-
-.product-other-details .remove-btn{
-    background: var(--primary-color);
-    color: white;
-    border: 1px solid white;
-}
-
-.product-other-details .wishlist-btn{
-    color: var(--primary-color);
-    border: 1px solid var(--primary-color);
-}
-
-.modify-quantity-btns{
-    text-align: right;
-    margin-left: auto;
-    margin-right: 20px;
-    padding: 1rem;
-}
-
-.modify-quantity-btns button{
-    background: var(--primary-color);
-    color: white;
-    font-weight: 600;
-    border: none;
-    border-radius: 5px;
-}
-
-.modify-quantity-btns button , .modify-quantity-btns span{
-    height: 25px;
-    width: 25px;
-    display: inline-block;
-    text-align: center;
-    margin-top: 15px;
-}
-
-.modify-quantity-btns div{
-    font-size: 1.7rem;
-    font-weight: 600;
-}
-
-.placeorder-btn{
-    padding: 0.7rem 2rem;
-    text-align: right;
-    border-top: 1px solid #D1D5DB;
-}
-
-.placeorder-btn button{
-    height: 50px;
-    width: 200px;
-    font-size: 1.2rem;
-    background: var(--primary-color);
-    color: white;
-    border: none;
-    border-radius: 5px;
-}
-
-.empty-cart{
-    display: flex;
-    justify-content: center;
     align-items: center;
-    color: #DDD6FE;
-    height: 70vh;
+  }
+
+  .cart .subtotal-container {
+    margin-top: 3rem;
+    width: 50%;
+  }
+
+  .cart .products-cart-container {
+    width: 80%;
+    margin-right: 0;
+  }
 }
 
-.empty-cart .icon{
-    font-size: 3.5rem;
-}
+@media (max-width: 900px) {
+  .product-other-details h2 {
+    font-size: 1.3rem;
+  }
 
-.empty-cart span{
-    font-size: 1.5rem; 
-}
+  .cart {
+    flex-direction: column;
+    align-items: center;
+  }
 
-@media (max-width:420px){
-    
+  .cart .subtotal-container {
+    margin-top: 3rem;
+    width: 50%;
+  }
+
+  .items-in-cart_product-details img {
+    height: 150px;
+    width: 150px;
+  }
+
+  .cart .products-cart-container {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .product-other-details span {
+    display: none;
+  }
 }
