--- a/src/components/Nav-Bar/Header.css
+++ b/src/components/Nav-Bar/Header.css
@@ -211,6 +211,12 @@
   .header_options {
     align-items: center;
     width: 20rem;
-    margin-left: 4rem;
+    margin-left: 2.5rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .header_options {
+    margin-left: 1rem;
   }
 }
