--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -1,136 +1,158 @@
-.signup{
-    background-color: rgba(0,0,0,.5);
-    z-index: 5;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom:0;
-    right: 0;
+.signup {
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
-.signup-container{
-    position: inherit;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    display: flex;
-    border: 2px solid var(--primary-color);
-    width: 55rem;
-    background-color: white;
-    border-radius: 5px;
+.signup-container {
+  position: inherit;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  display: flex;
+  border: 2px solid var(--primary-color);
+  width: 55rem;
+  background-color: white;
+  border-radius: 5px;
 }
 
-.signup-container .input-box{
-    display: flex;
+.signup-container .input-box {
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid var(--primary-color);
+  border-radius: 5px;
+  padding: 0 0.8rem;
+  background-color: #f7f2ff;
+}
+
+.signup-container .footer {
+  text-align: center;
+}
+
+.signup-container .footer strong {
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
+.signup_side-image {
+  position: relative;
+  background-image: linear-gradient(
+      45deg,
+      rgba(124, 58, 237, 0.8),
+      rgba(250, 250, 250, 0.5)
+    ),
+    url("https://images.unsplash.com/photo-1541689592655-f5f52825a3b8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=302&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 40%;
+}
+
+.signup_side-image div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.signup_side-image h1,
+.signup_side-image h2 {
+  color: var(--primary-color);
+  color: white;
+  font-weight: 600;
+  margin: 0;
+}
+
+.signup_side-image h2 {
+  font-size: 0.9rem;
+  letter-spacing: 27.5px;
+}
+
+.signup-form {
+  position: relative;
+}
+
+.signup-container .signup-form {
+  width: 60%;
+  padding: 2rem;
+}
+
+.signup-form .icon {
+  font-size: 1.5rem;
+  color: var(--primary-color);
+}
+
+.signup-form > div:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.signup-form div:last-child {
+  margin-top: auto;
+}
+
+.signup-form div .error {
+  color: red;
+  font-size: 0.9rem;
+}
+
+.signup-form input {
+  padding: 0.4rem 0.8rem;
+  border-radius: 5px;
+  border: none;
+  font-size: 1.1rem;
+  background-color: #f7f2ff;
+  width: 100%;
+}
+
+.signup-form input:focus {
+  outline: none;
+}
+
+.signup-form .submit-btn {
+  background-color: var(--primary-color);
+  color: white;
+  font-size: 1.1rem;
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: none;
+  width: 100%;
+}
+
+.close-form-icon {
+  position: absolute;
+  font-size: 1.6rem;
+  color: var(--primary-color);
+  right: 0.2rem;
+  top: 0.1rem;
+  cursor: pointer;
+}
+
+.show-pwd {
+  background-color: transparent;
+  border: none;
+  transform: scale(1.3);
+  margin-right: 5px;
+  color: grey;
+  margin-bottom: 5px;
+}
+
+@media (max-width: 1000px) {
+  .signup_side-image {
+    display: none;
+  }
+
+  .signup-container {
+    width: 90%;
     align-items: center;
-    border-bottom: 2px solid var(--primary-color);
-    border-radius: 5px;
-    padding: 0 0.8rem;
-    background-color: #f7f2ff;
-}
+    justify-content: center;
+    padding: 1rem 0;
+  }
 
-.signup-container .footer{
-    text-align: center;
-}
-
-.signup-container .footer strong{
-    color: var(--primary-color);
-    cursor: pointer;
-}
-
-
-.signup_side-image{
-    position: relative;
-    background-image: linear-gradient(45deg,rgba(124, 58, 237, 0.8),rgba(250, 250, 250, 0.5)), url('https://images.unsplash.com/photo-1541689592655-f5f52825a3b8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=302&q=80');
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 40%;
-}
-
-.signup_side-image div{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-
-.signup_side-image h1, .signup_side-image h2{
-    color: var(--primary-color);
-    color: white;
-    font-weight: 600;
-    margin: 0;
-}
-
-.signup_side-image h2{
-    font-size: 0.9rem;
-    letter-spacing: 27.5px;
-}
-
-.signup-form{
-    position: relative;
-}
-
-.signup-container .signup-form{
-    width: 60%;
+  .signup-container .signup-form {
+    width: 100%;
     padding: 2rem;
+  }
 }
-
-.signup-form .icon{
-    font-size: 1.5rem;
-    color: var(--primary-color);
-}
-
-.signup-form > div:not(:last-child){
-    margin-bottom: 1.5rem;
-}
-
-.signup-form div:last-child{
-    margin-top: auto;
-}
-
-.signup-form div .error{
-    color: red;
-    font-size: 0.9rem;
-}
-
-.signup-form input{
-    padding: 0.4rem 0.8rem;
-    border-radius: 5px;
-    border: none;
-    font-size: 1.1rem;
-    background-color: #f7f2ff;
-    width: 100%;
-}
-
-.signup-form input:focus{
-    outline: none;
-}
-
-.signup-form .submit-btn{
-    background-color: var(--primary-color);
-    color: white;
-    font-size: 1.1rem;
-    padding: 0.5rem;
-    border-radius: 5px;
-    border: none;
-    width: 100%;
-}
-
-.close-form-icon{
-    position: absolute;
-    font-size: 1.6rem;
-    color: var(--primary-color);
-    right: 0.2rem;
-    top:0.1rem;
-    cursor: pointer;
-}
-
-.show-pwd{
-    background-color: transparent;
-    border: none;
-    transform: scale(1.3);
-    margin-right: 5px;
-    color: grey;
-    margin-bottom: 5px;
-}
-
